--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-async-storage/async-storage": "^1.18.1",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
+    "@realm/react": "^0.4.3",
     "@reduxjs/toolkit": "^1.9.5",
     "formik": "^2.2.9",
     "react": "18.2.0",
@@ -21,6 +22,7 @@
     "react-native-screens": "^3.20.0",
     "react-native-toast-message": "^2.1.6",
     "react-redux": "^8.0.5",
+    "realm": "^11.8.0",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.2",
     "yup": "^1.1.1"
