--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "formik": "^2.2.9",
     "react": "18.2.0",
     "react-native": "0.71.7",
+    "react-native-get-random-values": "^1.8.0",
     "react-native-safe-area-context": "^4.5.1",
     "react-native-screens": "^3.20.0",
     "react-native-toast-message": "^2.1.6",
