--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-safe-area-context": "^4.5.1",
     "react-native-screens": "^3.20.0",
     "react-native-toast-message": "^2.1.6",
+    "react-native-vector-icons": "^9.2.0",
     "react-redux": "^8.0.5",
     "realm": "^11.8.0",
     "redux-persist": "^6.0.0",
@@ -36,6 +37,7 @@
     "@tsconfig/react-native": "^2.0.2",
     "@types/jest": "^29.2.1",
     "@types/react": "^18.0.24",
+    "@types/react-native-vector-icons": "^6.4.13",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
     "eslint": "^8.19.0",
